--- a/html-css/Module05/homework/task3/index.html
+++ b/html-css/Module05/homework/task3/index.html
@@ -16,7 +16,7 @@
        <header class="header-top clearfix">
         <a href="" class="logo">mart</a>
         <nav class="navigator">
-            <ul class="menu">
+            <ul class="menu clearfix">
                 <li class="menu-item">
                     <a href="#" class="link-item">home</a>
                 </li>
@@ -71,8 +71,9 @@
                        <button class="btn-hover">add to cart</button>
                    </div>
                        <img src="./img/man1.jpg" alt="photo-item" class="item">
-                        <p class="text">blue tshort</p>
-                        <p class="price">$56</p>
+                       <div class="price-text clearfix">
+                           <p class="text">blue tshort</p>
+                        <p class="price">$56</p></div>
                 </article>
                 <article class="photo-coll">
                     <div class="cover">
@@ -82,8 +83,10 @@
                         <button class="btn-hover">add to cart</button>
                     </div>
                     <img src="./img/girl1.jpg" alt="photo-item" class="item">
-                    <p class="text">woman tshort</p>
-                    <p class="price">$56</p>
+                    <div class="price-text clearfix">
+                        <p class="text">blue tshort</p>
+                        <p class="price">$56</p>
+                    </div>
                 </article>
                 <article class="photo-coll">
                     <div class="cover">
@@ -93,8 +96,9 @@
                         <button class="btn-hover">add to cart</button>
                     </div>
                     <img src="./img/man2.jpg" alt="photo-item" class="item">
-                    <p class="text">yellow tshort</p>
-                    <p class="price">$56</p>
+                    <div class="price-text clearfix">
+                        <p class="text">blue tshort</p>
+                        <p class="price">$56</p></div>
                 </article>
                 <article class="photo-coll">
                     <div class="cover">
@@ -104,8 +108,10 @@
                         <button class="btn-hover">add to cart</button>
                     </div>
                     <img src="./img/girl2.jpg" alt="photo-item" class="item">
-                    <p class="text">cool lingerie</p>
-                    <p class="price">$56</p>
+                    <div class="price-text clearfix">
+                        <p class="text">blue tshort</p>
+                        <p class="price">$56</p>
+                    </div>
                 </article>
             </div>
         </section>
