--- a/html-css/Module06/Task2/homework/index.html
+++ b/html-css/Module06/Task2/homework/index.html
@@ -80,7 +80,7 @@
     <!--.container>section.our-team>h4.title-info+h3.title+p+article.team-article*3>img.team-photo[src="./img/image7.jpg" alt="item"]+h5.photo-title+p.photo-text-->
     <div class="container">
         <section class="our-team">
-            <h4 class="title-info">who we are</h4>
+            <h4 class="title-info">Who we are</h4>
             <h3 class="title">meet our team</h3>
             <p class="mini-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquam aliquid assumenda delectus dolore eius eveniet ex excepturi, hic illum ipsa ipsam ipsum labore molestiae nihil nulla perspiciatis quia quisquam quos repellendus sint, sit vel voluptatem?</p>
             <div class="photo-article">
