--- a/html-css/Module06/Task2/homework/index.html
+++ b/html-css/Module06/Task2/homework/index.html
@@ -45,33 +45,44 @@
             <div class="photo-about">
             <article class="about-info">
                 <img src="./img/image1.png" alt="image" class="icon-little">
-                    <h5 class="title-article">photgraphy</h5>
+               <div class="container2">                                   <h5 class="title-article">photgraphy</h5>
                 <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate harum minima molestiae?</p>
+               </div>
             </article>
             <article class="about-info">
                 <img src="./img/image2.png" alt="image" class="icon-little">
+                <div class="container2">
                 <h5 class="title-article">web-design</h5>
                 <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium distinctio possimus sit!</p>
+                </div>
             </article>
             <article class="about-info">
                 <img src="./img/image3.png" alt="image" class="icon-little">
+                <div class="container2">
                 <h5 class="title-article">creativy</h5>
                 <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus nisi nostrum nulla.</p>
+                </div>
             </article>
             <article class="about-info">
                 <img src="./img/image4.png" alt="image" class="icon-little">
+                <div class="container2">
                 <h5 class="title-article">seo</h5>
                 <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus libero obcaecati quos.</p>
+                </div>
             </article>
             <article class="about-info">
                 <img src="./img/image5.png" alt="image" class="icon-little">
+                <div class="container2">
                 <h5 class="title-article">css/html</h5>
                 <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate facere quisquam tempora!</p>
+                </div>
             </article>
             <article class="about-info">
                 <img src="./img/image6.png" alt="image" class="icon-little">
+                <div class="container2">
                 <h5 class="title-article">digital</h5>
                 <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam ipsa modi nemo.</p>
+                </div>
             </article>
             </div>
         </section>
