--- a/html-css/Module08/Classwork/Task1/index.html
+++ b/html-css/Module08/Classwork/Task1/index.html
@@ -37,5 +37,16 @@
         <div class="box box3"></div>
     </div>
 </div>
+<div class="wrapp4">
+    <h2 class="tasktwo">Task4</h2>
+    <div class="container-photo">
+        <picture>
+            <source media="(min-width: 1200px)" srcset="img/image1.jpg 1200w">
+            <source media="(min-width: 768px)" srcset="img/image2.jpeg 768w">
+            <source media="(min-width: 480px)" srcset="img/image3.jpeg 480w">
+            <img src="img/general.jpeg" alt="image">
+        </picture>
+    </div>
+</div>
 </body>
 </html>
