--- a/html-css/Module07/homework/index.html
+++ b/html-css/Module07/homework/index.html
@@ -5,127 +5,83 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>My Blog</title>
-    <link href="https://fonts.googleapis.com/css?family=Merriweather:400,400i,700" rel="stylesheet">
+    <title>Homework7</title>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Roboto:400,700" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<!--.wrapper>.container>header.header>a.logo+nav.nav>ul.menu>li.menu-item*4>a.menu-link-->
-<!--Header-->
+<!--.wrapper>.container>header.header>a.logo+nav.nav>ul.menu>li.item*5>a.link-->
 <div class="wrapper">
     <div class="container">
         <header class="header">
-            <a href="#" class="logo">neuron</a>
+            <a href="#" class="logo">golden</a>
             <nav class="nav">
                 <ul class="menu">
-                    <li class="menu-item">
-                        <a href="#" class="menu-link">home</a>
+                    <li class="item">
+                        <a href="#" class="link">home</a>
                     </li>
-                    <li class="menu-item">
-                        <a href="#" class="menu-link">about</a>
+                    <li class="item">
+                        <a href="#" class="link">services</a>
                     </li>
-                    <li class="menu-item">
-                        <a href="#" class="menu-link">gallery</a>
+                    <li class="item">
+                        <a href="#" class="link">portfolio</a>
                     </li>
-                    <li class="menu-item">
-                        <a href="#" class="menu-link">contact</a>
+                    <li class="item">
+                        <a href="#" class="link">about</a>
+                    </li>
+                    <li class="item">
+                        <a href="#" class="link">contact</a>
                     </li>
                 </ul>
             </nav>
         </header>
     </div>
-</div>
-<!--.wrapper-img>.container>section.about>h2.title-->
-<!--IMG-->
-<div class="wrapper-img">
-    <div class="container">
-            <section class="about">
-                <h2 class="title">About us</h2>
-            </section>
-    </div>
-</div>
-<!--.wrapper>.container>main.main>section.section-$*4-->
-<!--Main-->
-<div class="wrapper">
+    <!--.container>main.main>h2.title+p.about-title+.photo>article.services*3>img.img+h3.title-services+p.text-services-->
+    <!--Section Main-->
     <div class="container">
         <main class="main">
-            <section class="section-1">
-                <!--article.section-1-article*3>h3.article-title.article-size+p.text*2-->
-                <article class="section-1-article">
-                    <h3 class="article-title article-size">Our Story</h3>
-                    <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium exercitationem, in incidunt ipsa molestias quis sapiente.</p>
-                    <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis ea eligendi incidunt molestiae nihil officiis similique!</p>
+            <h2 class="title">services</h2>
+            <p class="about-title">Lorem ipsum dolor sit amet, consectetur.</p>
+            <div class="photo">
+                <article class="services">
+                    <img src="./img/image1.jpg" alt="image" class="img">
+                    <h3 class="title-services">e-commerce</h3>
+                    <p class="text-services">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus at neque quos sit soluta? Ipsum, molestias.</p>
                 </article>
-                <article class="section-1-article">
-                    <h3 class="article-title article-size">New Design</h3>
-                    <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam culpa, deserunt earum explicabo magni nam placeat.</p>
-                    <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At aut ducimus exercitationem magnam repellendus sit tempora?</p>
+                <article class="services">
+                    <img src="./img/image2.jpg" alt="image" class="img">
+                    <h3 class="title-services">responsive web</h3>
+                    <p class="text-services">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad asperiores aut corporis nostrum optio. Est, placeat?</p>
                 </article>
-                <article class="section-1-article">
-                    <h3 class="article-title article-size">html css</h3>
-                    <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae ducimus, eligendi facere in nihil quisquam soluta?</p>
-                    <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem in iure officia recusandae veritatis. Dicta, ipsam?</p>
+                <article class="services">
+                    <img src="./img/image3.jpg" alt="image" class="img">
+                   <h3 class="title-services">web security</h3>
+                    <p class="text-services">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam atque distinctio nam obcaecati quisquam rem rerum?</p>
                 </article>
-            </section>
-            <section class="section-2">
-                <div class="section-2-container">
-                    <h3 class="article-title">Fully Customizable</h3>
-                    <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet cum dolore eos, eveniet hic incidunt molestiae nobis porro quasi quia quis repudiandae sed tempore veniam vitae. Atque eius in repellendus. Magnam, nobis.</p>
-                    <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam amet consequuntur culpa debitis delectus deserunt est eum iusto modi molestiae, officia pariatur placeat quam qui quidem quisquam quod recusandae, repudiandae vitae voluptas.</p>
-                </div>
-                <img src="./img/about-image.jpg" alt="image" class="section-2-img">
-            </section>
-            <section class="section-3">
-                <!--article.section-3-article*3>img.article-img+h3.article-title+p.text{lorem16}-->
-                <article class="section-3-article">
-                    <img src="./img/about-image1.jpg" alt="image" class="article-img">
-                    <h3 class="article-title">Section one</h3>
-                    <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab cum debitis dolore ipsam magni, quae recusandae?</p>
-                </article>
-                <article class="section-3-article">
-                    <img src="./img/about-image2.jpg" alt="image" class="article-img">
-                    <h3 class="article-title">Section two</h3>
-                    <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur deleniti deserunt fugit iusto minus qui quia!</p>
-                </article>
-                <article class="section-3-article">
-                    <img src="./img/about-image3.jpg" alt="image" class="article-img">
-                    <h3 class="article-title">Section three</h3>
-                    <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum exercitationem odit placeat. Impedit inventore suscipit voluptate!</p>
-                </article>
-            </section>
-            <section class="section-4">
-                <h3 class="article-title">One column</h3>
-                <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A cumque dolorem doloremque dolores esse iste laboriosam minima, possimus provident rerum? Architecto at cupiditate distinctio ea eaque, enim numquam provident repellendus totam unde.</p>
-            </section>
+            </div>
         </main>
     </div>
 </div>
-<!--.wrapper-footer>.container>footer.footer>article.footer-article*2-->
+<!--.wrapp2>.container>footer.footer>h2.title+p.about-title+form-->
 <!--Footer-->
-<div class="wrapper-footer">
+<div class="wrapp2">
     <div class="container">
         <footer class="footer">
-            <article class="footer-article">
-                <!--h3.article-title.article-title-color+p.text*2-->
-                <h3 class="article-title article-title-color">Neuron studio</h3>
-                <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur pariatur quidem rerum unde! Beatae, deserunt eos.</p>
-                <p class="text">Copyright &#169; lorem ipsum dolor sit amet.</p>
-            </article>
-            <article class="footer-article">
-                <!--h3.article-title.article-title-color+ul.contact>li.contact-item*3-->
-                <h3 class="article-title article-title-color">Talk to us</h3>
-                <ul class="contact">
-                    <li class="contact-item">
-                        512 Delicious Street, San Francisco, CA 10880
-                    </li>
-                    <li class="contact-item">
-                        010-020-0990
-                    </li>
-                    <li class="contact-item">
-                        info@company.com
-                    </li>
-                </ul>
-            </article>
+            <h2 class="title title-two">contact us</h2>
+            <p class="about-title">
+                Proin iaculis purus consequat sem cure.
+            </p>
+            <form class="contact-form" action="#" method="post">
+                <div class="form-us">
+                    <div class="form-left">
+                        <input class="contact-form-text" type="text" placeholder="your name *" name="name" required="">
+                        <input class="contact-form-email" type="email" placeholder="your e-mail *" name="name" required="">
+                        <input class="subject-form" type="text" placeholder="subject *" name="name" required="">
+                    </div>
+                    <textarea class="comments" name="feedback" placeholder="your message *" maxlength="500" required></textarea>
+                </div>
+                <input type="submit" class="contact-form-btn" value="send message">
+            </form>
         </footer>
     </div>
 </div>
