--- a/html-css/Module07/homework/index.html
+++ b/html-css/Module07/homework/index.html
@@ -76,7 +76,7 @@
                     <div class="form-left">
                         <input class="contact-form-text" type="text" placeholder="your name *" name="name" required="">
                         <input class="contact-form-email" type="email" placeholder="your e-mail *" name="name" required="">
-                        <input class="subject-form" type="text" placeholder="subject *" name="name" required="">
+                        <input class="subject-form" type="text" placeholder="subject" name="name">
                     </div>
                     <textarea class="comments" name="feedback" placeholder="your message *" maxlength="500" required></textarea>
                 </div>
